--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         </div>
         <div class="footer-subscribe-div">
           <p class="subscribe-text">Subscribe</p>
-          <form class="footer-form">
+          <form class="footer-form-email">
             <label class="subscribe-form-label">
               <input
                 class="subscribe-input"
@@ -506,7 +506,7 @@
                 id="user-name"
                 required
               />
-              <svg class="modal-icon" width="12" height="12">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-Vector-1"></use>
               </svg>
             </div>
@@ -515,7 +515,7 @@
             <label class="modal-form-label" for="user-tell">Phone</label>
             <div class="modal-cont-input">
               <input class="modal-input" type="tel" id="user-tell" required />
-              <svg class="modal-icon" width="13" height="13">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-Vector-2"></use>
               </svg>
             </div>
@@ -529,18 +529,18 @@
                 id="user-email"
                 required
               />
-              <svg class="modal-icon" width="16" height="12">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-Vector-3"></use>
               </svg>
             </div>
           </div>
-          <div class="form-wraper-cont-coment">
-            <label class="modal-form-label-coment" for="user-coment"
+          <div class="form-wraper-cont-comment">
+            <label class="modal-form-label-comment" for="user-comment"
               >Comment</label
             >
             <textarea
               class="modal-textarea"
-              id="user-coment"
+              id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
@@ -548,9 +548,11 @@
             <input
               class="checkbox visually-hidden"
               type="checkbox"
-              id="user-checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
             />
-            <label class="custom-lebal-user-checkbox" for="user-checkbox">
+            <label class="custom-lebal-user-checkbox" for="user-privacy">
               <span class="custom-checkbox"
                 ><svg class="svg-checkbox" width="10" height="8">
                   <use
