--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             </label>
             <button class="submit-btn" type="submit">
               Subscribe
-              <svg class="subscribe-svg" width="24" height="20">
+              <svg class="subscribe-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
@@ -514,7 +514,13 @@
           <div class="form-wraper-cont">
             <label class="modal-form-label" for="user-tell">Phone</label>
             <div class="modal-cont-input">
-              <input class="modal-input" type="tel" id="user-tell" required />
+              <input
+                class="modal-input"
+                type="tel"
+                name="user-tell"
+                id="user-tell"
+                required
+              />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-Vector-2"></use>
               </svg>
@@ -527,6 +533,7 @@
                 class="modal-input"
                 type="email"
                 id="user-email"
+                name="user-email"
                 required
               />
               <svg class="modal-icon" width="18" height="24">
@@ -542,6 +549,7 @@
               class="modal-textarea"
               id="user-comment"
               placeholder="Text input"
+              name="user-comment"
             ></textarea>
           </div>
           <div class="modal-cont-checkbox">
