--- a/index.html
+++ b/index.html
@@ -542,9 +542,7 @@
             </div>
           </div>
           <div class="form-wraper-cont-comment">
-            <label class="modal-form-label-comment" for="user-comment"
-              >Comment</label
-            >
+            <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-textarea"
               id="user-comment"
